fix: shrunk margins on mobile

--- a/css/src/layout/card.css
+++ b/css/src/layout/card.css
@@ -3,7 +3,7 @@
     border-radius: 0.75rem;
     display: flex;
     flex-direction: column;
-    margin: 1em 1em;
+    margin: .5em .5em;
 }
 
 .card > .text {
